Closed Bug 886144 Opened 12 years ago Closed 12 years ago

Crash [@ setOperand] or [@ js::ion::MPhi::addInput] or Assertion failure: pred->stackPosition_ == stackPosition_ + popped, at ion/MIRGraph.cpp

Categories

(Core :: JavaScript Engine, defect)

x86_64
macOS
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla25

People

(Reporter: gkw, Assigned: shu)

References

Details

(Keywords: assertion, regression, testcase, Whiteboard: [jsbugmon:update])

Crash Data

Attachments

(4 files)

Attached file stack
try { Array.prototype.map(); } catch (e) {} ParallelArray([99], function() { [].map(decodeURIComponent) }) asserts js debug shell on m-c changeset 4c4f75c20e9b without any CLI arguments at Assertion failure: pred->stackPosition_ == stackPosition_ + popped, at ion/MIRGraph.cpp
Whiteboard: [jsbugmon:update] → [jsbugmon:update,bisect]
This testcase causes a likely null deref in opt builds at setOperand with js::ion::MPhi::addInput on the stack, tested with a 64-bit opt threadsafe --enable-more-deterministic js shell.
Crash Signature: [@ setOperand] [@ js::ion::MPhi::addInput]
Summary: Assertion failure: pred->stackPosition_ == stackPosition_ + popped, at ion/MIRGraph.cpp → Crash [@ setOperand] or [@ js::ion::MPhi::addInput] or Assertion failure: pred->stackPosition_ == stackPosition_ + popped, at ion/MIRGraph.cpp
From the bisection log, I'm guessing this is due to parallelarrays, bug 829602: http://hg.mozilla.org/mozilla-central/rev/b00eb1ef1517
Blocks: 829602
Flags: needinfo?(shu)
Flags: needinfo?(nmatsakis)
Whiteboard: [jsbugmon:update,bisect] → [jsbugmon:update]
Attached patch fixSplinter Review
ThrowError was being very incorrectly inlined in parallel execution to a MParBailout. But moreover, it would bail out anyways because it would result in a native function call, so I just removed the inlining.
Assignee: general → shu
Attachment #767539 - Flags: review?(nmatsakis)
Flags: needinfo?(shu)
Flags: needinfo?(nmatsakis)
Attachment #767539 - Flags: review?(nmatsakis) → review+
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla25
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: