Bug 886144 - Remove incorrect inlining of ThrowError. (r=nmatsakis)