js/src/ion/IonBuilder.h
@@ -507,7 +507,6 @@ class IonBuilder : public MIRGenerator
                                            uint32_t discards);
 
     // Utility intrinsics.
-    InliningStatus inlineThrowError(CallInfo &callInfo);
     InliningStatus inlineIsCallable(CallInfo &callInfo);
     InliningStatus inlineNewObjectWithClassPrototype(CallInfo &callInfo);
     InliningStatus inlineHaveSameClass(CallInfo &callInfo);
